<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.spectrum.TapbarFragments.StoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        layout="@layout/activity_toolbarloginmodule"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeone"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_height="250dp"
            android:id="@+id/linearLayout">
            <ImageView
                android:layout_width="180dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_teststrips"
                android:layout_height="150dp" />

            <LinearLayout
                android:layout_width="140dp"
                android:layout_marginLeft="90dp"
                android:orientation="vertical"
                android:layout_height="50dp">
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:text="@string/urinestrip"
                    android:layout_height="wrap_content" />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:text="@string/price"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorred"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/textlayout"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:layout_height="100dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

            <com.example.dell.spectrum.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:id="@+id/testitem"
                android:text="@string/testitem"
                android:layout_height="wrap_content" />
            <com.example.dell.spectrum.FONTS.TextViewFontStyle
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/testitem"
                android:text="@string/testlist"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <Button
            android:layout_width="200dp"
            android:id="@+id/addtocart"
            android:layout_below="@id/textlayout"
            android:text="@string/addtocart"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/store_shape"
            android:layout_height="40dp" />



    </RelativeLayout>
</RelativeLayout>


