<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/activity_toolbarloginmodule">
    </include>
<com.example.dell.spectrum.FONTS.TextViewFontStyle
    android:layout_width="match_parent"
    android:id="@+id/text_deviceconfirm"
    android:layout_marginTop="120dp"
    android:gravity="center"
    android:textSize="18sp"
    android:textColor="@color/colorGray"
    android:text="@string/textconfirmdevice"
    android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="150dp"
        android:id="@+id/image_in_confirm_device"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_adddevice"
        android:scaleType="fitCenter"
        android:fitsSystemWindows="true"
        android:layout_height="150dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/image_in_confirm_device"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/btncancel"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_confirm"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/btnconfirm"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorBlue"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>