<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.spectrum.TapbarFragments.SetupFragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        layout="@layout/activity_toolbaroperation"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#cccccc"
        android:layout_marginTop="50dp"
        android:id="@+id/main">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainimage"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <ImageView
                android:layout_width="110dp"
                android:id="@+id/man"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="125dp"
                android:background="@drawable/ic_man"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kevin"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginTop="130dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_below="@+id/main">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginLeft="15dp"
            android:text="@string/members"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_listline_btm"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:id="@+id/scroll"
        android:layout_marginTop="260dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_father"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_accoutbutton"/>
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/edward"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/dad"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="60dp"
                    />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:id="@+id/btn1"
                    android:background="@drawable/ic_rightarrow"
                    android:layout_centerHorizontal="true" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_listline_btm"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_mom"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_accoutbutton"/>
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:text="@string/sophia"
                    />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="60dp"
                    android:text="@string/mom"
                    />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_rightarrow" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/ic_listline_btm"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_companion"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_accoutbutton"/>
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:text="@string/bella"
                    />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="60dp"
                    android:text="@string/wife"
                    />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_rightarrow"
                    android:layout_centerHorizontal="true" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/ic_listline_btm"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_son"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_accoutbutton"/>
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:text="@string/james"
                    />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="60dp"
                    android:text="@string/son"
                    />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_rightarrow"
                    android:layout_centerHorizontal="true" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/ic_listline_btm"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_daughter"
                android:layout_height="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/ic_accoutbutton"
                    android:id="@+id/imageView" />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="70dp"
                    android:text="@string/aurora"
                    android:layout_alignBaseline="@+id/textViewFontStyle"
                    android:layout_alignBottom="@+id/textViewFontStyle"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_marginStart="26dp" />
                <com.example.dell.spectrum.FONTS.TextViewFontStyle
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                    android:layout_marginRight="60dp"
                    android:text="@string/daughter"
                    android:id="@+id/textViewFontStyle" />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_rightarrow"
                    android:layout_centerHorizontal="true" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/ic_listline_btm"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:id="@+id/rl_othermembers"-->
            <!--android:layout_height="50dp">-->
            <!--<ImageView-->
            <!--android:layout_width="37dp"-->
            <!--android:layout_height="37dp"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:background="@drawable/ic_accoutbutton"/>-->
            <!--&lt;!&ndash;<com.example.dell.spectrum.FONTS.TextViewFontStyle&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="20dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_centerVertical="true"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_marginLeft="80dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:text="@string/other"&ndash;&gt;-->
            <!--&lt;!&ndash;/>&ndash;&gt;-->
            <!--<Button-->
            <!--android:layout_width="25dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:background="@drawable/ic_rightarrow"-->
            <!--android:layout_centerHorizontal="true" />-->
            <!--<View-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginTop="13dp"-->
            <!--android:background="@drawable/ic_listline_btm"-->
            <!--android:layout_alignParentBottom="true"/>-->
            <!--</RelativeLayout>-->
        </LinearLayout>
    </ScrollView>
    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="55dp"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:background="#cccccc">-->
    <!--<com.example.dell.spectrum.FONTS.ButtonFontStyle-->
    <!--android:layout_below="@+id/scroll"-->
    <!--android:layout_width="60dp"-->
    <!--android:id="@+id/add_btn"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:background="@drawable/ic_addbtn"-->
    <!--android:layout_height="60dp" />-->
    <!--</RelativeLayout>-->
</RelativeLayout>
