<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="50dp">
     <include
         layout="@layout/activity_toolbaroperation"/>
 </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="330dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <com.example.dell.spectrum.FONTS.TextViewFontStyle
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textSize="30dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_logo"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shapes">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_lockicon" />

                <com.example.dell.spectrum.FONTS.EditTextFontStyle
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/oldpsw"
                    android:singleLine="true"
                    android:textColor="@color/colorGray"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/editold_Email"
                    android:background="@android:color/transparent" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/image"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="#ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shapes">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_lockicon" />

                <com.example.dell.spectrum.FONTS.EditTextFontStyle
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/newpsw"
                    android:singleLine="true"
                    android:textColor="@color/colorGray"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/editnew_password"
                    android:background="@android:color/transparent" />
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/image"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="#ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shapes">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_lockicon" />

                <com.example.dell.spectrum.FONTS.EditTextFontStyle
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/repsw"
                    android:layout_marginLeft="50dp"
                    android:singleLine="true"
                    android:textColor="@color/colorGray"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:id="@+id/editre_password"
                    android:background="@android:color/transparent" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
    <com.example.dell.spectrum.FONTS.ButtonFontStyle
        android:id="@+id/changestep"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/scrollView"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/signinbutton"
        android:text="@string/changepsw" />


</LinearLayout>